try to change backgroundimage

--- a/Beantown.html
+++ b/Beantown.html
@@ -30,8 +30,8 @@
 
 	<div>
 		
-		<h1> Bean Town </h1>
-		<h2> Coffee House & bakery</h2>
+		<h1><center> Bean Town </center></h1>
+		<h2> <center>Coffee House & bakery</center>	</h2>
 		<div class="line"></div>
 	    
      </div>
