--- a/Beantown.html
+++ b/Beantown.html
@@ -51,6 +51,7 @@
 
     </div>
     <div id="aboutmebox">
+    <a name="contact" href="CONTACT">
            <!--  <header> <h2>About Us</h2></header> -->
           <p>Greetings from the folks at Bean Town — a unique coffee house and bakery located in beautiful Sierra Madre!
 
