trying to add rotaing words

--- a/Beantown.html
+++ b/Beantown.html
@@ -30,8 +30,8 @@
 
 	<div>
 		
-		<h1><center> Bean Town </center></h1>
-		<h2> <center>Coffee House & bakery</center>	</h2>
+		<h1 class="h1"><center> Bean Town </center></h1>
+		<h2 class="h1"> <center>Coffee House & bakery</center>	</h2>
 		<div class="line"></div>
 	    
      </div>
