--- a/Beantown.html
+++ b/Beantown.html
@@ -2,8 +2,7 @@
 <html>
 <head>
  <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Bean Town Coffee Bar</title>
 </head>
@@ -30,8 +29,8 @@
 
 	<div>
 		
-		<h1 class="h1"><center> Bean Town </center></h1>
-		<h2 class="h1"> <center>Coffee House & bakery</center>	</h2>
+		<h1 class="h1"><center> Bean Town <strong> Coffee House & </strong> <strong> Bakery </strong> </center></h1>
+	
 		<div class="line"></div>
 	    
      </div>
