--- a/Beantown.html
+++ b/Beantown.html
@@ -72,6 +72,8 @@
 
     </div>
 </body>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" href="javascript/header.js"></script>
 <script type="text/javascript" href="javascript/bootstrap.min.js"></script>
 
