--- a/Beantown.html
+++ b/Beantown.html
@@ -29,7 +29,7 @@
 
 	<div>
 		
-		<h1 class="h1"><center> Bean Town <strong> Coffee House & </strong> <strong> Bakery </strong> </center></h1>
+		<h1 class="h1"><center> Bean Town <strong> Coffee House & </strong> <strong> Bakery </strong> <strong> 45 N Baldwin Ave</strong> </center></h1>
 	
 		<div class="line"></div>
 	    
@@ -50,13 +50,14 @@
 
     </div>
 	    <div id="aboutmebox">
-	    <a name="contact" href="CONTACT">
+	    <a name="contact" href="contact">
 	           <!--  <header> <h2>About Us</h2></header> -->
-	          <p>Greetings from the folks at Bean Town — a unique coffee house and bakery located in beautiful Sierra Madre!
+	           <h1>Contact Us</h1>
+			   <p>Give us a call, and we'll prepare your order to go!
+					(626) 355-1596
 
-		      For over 15 years, Bean Town has been brewing coffee and baking all sorts of treats. We pride ourselves in using the best ingredients to serve you a quality product. Bean Town proudly serves private label coffee from The Sierra Madre Roasting Company that we roast and brew to perfection.
-
-			  With our onsite kitchen and bakery we create homemade soups, salads, sandwiches, quiches, and other comforting fare. Baking daily such as fresh cookies, pastries, cinnamon rolls, scones, muffins, croissants,the list goes on.  We also serve the world famous Fosselmans ice cream, and a variety of blended frozen drinks. </p>
+					We'd love to hear from you!
+					Email us: contact@beantowncoffeebar.com </p>
 
 	    </div>
 		    <div id="aboutmebox">
