got pictures to work and header is kinda mobile friendlu

--- a/Beantown.html
+++ b/Beantown.html
@@ -39,7 +39,7 @@
 
 <div class="container">
 
-	<div id="aboutmebox">
+	<div id="aboutmebox" class="col-xs-8">
 	<a name="About Us" href="About Us"></a>
            <!--  <header> <h2>About Us</h2></header> -->
           <p>Greetings from the folks at Bean Town — a unique coffee house and bakery located in beautiful Sierra Madre!
@@ -75,7 +75,6 @@
     </div>
 </body>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" href="javascript/header.js"></script>
 <script type="text/javascript" href="javascript/bootstrap.min.js"></script>
 
