--- a/Beantown.html
+++ b/Beantown.html
@@ -93,8 +93,12 @@ http://codepen.io/ColdToast/pen/bBJyK
 		    </div>
 		     <div class="aboutmebox" class="text-justify">
 		     <a name="catering"></a>
-		          <h1>Bean Town Catering</h2>
+		          <h2>Bean Town Catering</h2>
 		          <p>Bean Town offers the finest catering experience to our customers. Find out what we can do for you by giving us a call at 626-355-BEAN (2326).</p>
+
+		    </div>
+		      <div class="aboutmebox" class="text-justify">
+		          <h2>Hours</h2>
 
 		    </div>
 
@@ -104,12 +108,12 @@ http://codepen.io/ColdToast/pen/bBJyK
 			    <img src="beantown.jpg" />
 			    <span>Mouse</span>
 			  </div>
-			  <hr />
+			  
 			  <div class="image">
 			    <img src="cake.jpg" />
 			    <span>Over</span>
 			  </div> 
-			  <hr />
+			  
 			  <div class="image">
 			    <img src="fosselman.jpg" />
 			    <span>Me</span>
