addeed google maps

--- a/Beantown.html
+++ b/Beantown.html
@@ -34,7 +34,6 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 	<title>Bean Town Coffee Bar</title>
 </head>
 <body>
-http://codepen.io/ColdToast/pen/bBJyK
 
 
     <header>
@@ -45,7 +44,7 @@ http://codepen.io/ColdToast/pen/bBJyK
      <a href="#catering" rel="" class="anchorLink">CATERING</a>
      <a href="#gift" rel="" class="anchorLink">GIFT SHOP</a>
      <a href="#contact" rel="" class="anchorLink">CONTACT</a>
-     <a href="#location" rel="" class="anchorLink">LOCATION</a>
+     <a href="location.html" rel="" class="anchorLink">LOCATION</a>
      <a href="#About Us" rel="" class="anchorLink">ABOUT US</a>
     
 
@@ -62,7 +61,7 @@ http://codepen.io/ColdToast/pen/bBJyK
 
 <div class="container">
 
-	<div class="aboutmebox" class="text-justify">
+	<div class="divbox" class="text-justify">
 	<a name="About Us" href="About Us"></a>
 			<h1>About Us</h1>
           <p>Greetings from the folks at Bean Town — a unique coffee house and bakery located in beautiful Sierra Madre!
@@ -71,9 +70,26 @@ http://codepen.io/ColdToast/pen/bBJyK
 	      For over 15 years, Bean Town has been brewing coffee and baking all sorts of treats. We pride ourselves in using the best ingredients to serve you a quality product. Bean Town proudly serves private label coffee from The Sierra Madre Roasting Company that we roast and brew to perfection.
 
 		  With our onsite kitchen and bakery we create homemade soups, salads, sandwiches, quiches, and other comforting fare. Baking daily such as fresh cookies, pastries, cinnamon rolls, scones, muffins, croissants,the list goes on.  We also serve the world famous Fosselmans ice cream, and a variety of blended frozen drinks. </p>
+				<!-- Small modal -->
+				<button type="button" data-toggle="modal" data-target="#myModal">Hours</button>
+				<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+				  <div class="modal-dialog modal-sm">
+				    <div class="modal-content">
+					       <h2>Hours</h2>
+			          <h3>Monday-Wednesday</h3>
+			          <h4>5:30 am to 9:00 pm</h4>
+			          
+			          <h3>Thurday-Saturday</h3>
+			          <h4>5:30 am-10:00 pm</h4>	
+
+			          <h3>Sunday</h3>
+			          <h4>6:00 am-10:00 pm</h4>			    
+			          </div>
+				  </div>
+				</div>
 
     </div>
-	    <div class="aboutmebox" class="text=justify">
+	    <div class="divbox" class="text=justify">
 	    <a name="contact"></a>
 	           <h1>Contact Bean Town</h1>
 			   <p>Give us a call, and we'll prepare your order to go!
@@ -83,7 +99,7 @@ http://codepen.io/ColdToast/pen/bBJyK
 					Email us: contact@beantowncoffeebar.com </p>
 
 	    </div>
-		    <div class="aboutmebox" class="text-justify">
+		    <div class="divbox" class="text-justify">
 		          <p>Greetings from the folks at Bean Town — a unique coffee house and bakery located in beautiful Sierra Madre!
 
 			      For over 15 years, Bean Town has been brewing coffee and baking all sorts of treats. We pride ourselves in using the best ingredients to serve you a quality product. Bean Town proudly serves private label coffee from The Sierra Madre Roasting Company that we roast and brew to perfection.
@@ -91,14 +107,22 @@ http://codepen.io/ColdToast/pen/bBJyK
 				  With our onsite kitchen and bakery we create homemade soups, salads, sandwiches, quiches, and other comforting fare. Baking daily such as fresh cookies, pastries, cinnamon rolls, scones, muffins, croissants,the list goes on.  We also serve the world famous Fosselmans ice cream, and a variety of blended frozen drinks. </p>
 
 		    </div>
-		     <div class="aboutmebox" class="text-justify">
+		     <div class="divbox" class="text-justify">
 		     <a name="catering"></a>
 		          <h2>Bean Town Catering</h2>
 		          <p>Bean Town offers the finest catering experience to our customers. Find out what we can do for you by giving us a call at 626-355-BEAN (2326).</p>
 
 		    </div>
-		      <div class="aboutmebox" class="text-justify">
+		      <div class="divbox" class="text-justify">
 		          <h2>Hours</h2>
+		          <h3>Monday-Wednesday</h3>
+		          <h4>5:30 am to 9:00 pm</h4>
+		          <br>
+		          <h3>Thurday-Saturday</h3>
+		          <h4>5:30pm-10:00 pm</h4>
+		          <br>
+		          <h3>Sunday</h3>
+			      <h4>6:00 am-10:00 pm</h4>	
 
 		    </div>
 
