--- a/Beantown.html
+++ b/Beantown.html
@@ -39,7 +39,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
     <header>
   <div>
     <h1><a href="beantown.html">Bean Town</a></h1>
-    <nav class="nav-tabs">
+    <nav class="nav-tabs nav-bar">
      <a href="http://www.musthavemenus.com/places/bean-town-sierra-madre-ca-91024-59533/bean-town-menu-10261263" rel="" class="anchorLink">MENU</a>
      <a href="#catering" rel="" class="anchorLink">CATERING</a>
      <a href="#gift" rel="" class="anchorLink">GIFT SHOP</a>
@@ -100,11 +100,14 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 
 	    </div>
 		    <div class="divbox" class="text-justify">
-		          <p>Greetings from the folks at Bean Town — a unique coffee house and bakery located in beautiful Sierra Madre!
+		    <a name="gift"></a>
+		    <h1>Gift Shop</h1>
+		          <p>Coffee beans and gifts availble in the store front.
 
-			      For over 15 years, Bean Town has been brewing coffee and baking all sorts of treats. We pride ourselves in using the best ingredients to serve you a quality product. Bean Town proudly serves private label coffee from The Sierra Madre Roasting Company that we roast and brew to perfection.
+						Gift Cards available in any amount. Come in or call and have us send a surprise to your special someone.
+						626-355-1596.
 
-				  With our onsite kitchen and bakery we create homemade soups, salads, sandwiches, quiches, and other comforting fare. Baking daily such as fresh cookies, pastries, cinnamon rolls, scones, muffins, croissants,the list goes on.  We also serve the world famous Fosselmans ice cream, and a variety of blended frozen drinks. </p>
+						Product list coming soon! </p>
 
 		    </div>
 		     <div class="divbox" class="text-justify">
@@ -147,10 +150,12 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 
 			    </div>
 </body>
-<script type="text/javascript" href="main.js"></script>
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" href="javascript/header.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" href="javascript/bootstrap.min.js"></script>
+<script type="text/javascript" href="javascript/bootstrap.js"></script>
+<script type="text/javascript" href="main.js"></script>
+<script type="text/javascript" href="javascript/header.js"></script>
 
 
 </html>
