trying for mobile responsive

--- a/Beantown.html
+++ b/Beantown.html
@@ -98,7 +98,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 					Email us: contact@beantowncoffeebar.com </p>
 
 	    </div>
-		    <div class="divbox" class="text-justify">
+		    <div class="divbox col-xs-8" class="text-justify">
 		    <a name="gift"></a>
 		    <h1>Gift Shop</h1>
 		          <p>Coffee beans and gifts availble in the store front.
@@ -109,13 +109,13 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 						Product list coming soon! </p>
 
 		    </div>
-		     <div class="divbox" class="text-justify">
+		     <div class="divbox col-xs-8" class="text-justify">
 		     <a name="catering"></a>
 		          <h2>Bean Town Catering</h2>
 		          <p>Bean Town offers the finest catering experience to our customers. Find out what we can do for you by giving us a call at 626-355-BEAN (2326).</p>
 
 		    </div>
-		      <div class="divbox" class="text-justify">
+		      <div class="divbox col-xs-8" class="text-justify">
 		          <h2>Hours</h2>
 		          <h3>Monday-Wednesday</h3>
 		          <h4>5:30 am to 9:00 pm</h4>
