--- a/Beantown.html
+++ b/Beantown.html
@@ -130,13 +130,13 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 
 			
 			<div>
-				<div class="image">
-			    <img src="beantown.jpg" />
+				<div>
+			    <img src="beantown.jpg" class="image-rounded"/>
 			    <span>Mouse</span>
 			  </div>
 			  
-			  <div class="image">
-			    <img src="fosselman.jpg" />
+			  <div>
+			    <img src="fosselman.jpg" class="image-rounded" />
 			    <span>Me</span>
 			  </div> 
 			</div>
