--- a/Beantown.html
+++ b/Beantown.html
@@ -50,6 +50,18 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
     </nav>
   </div>
 </header>
+<!-- http://demos.uilang.com/hamburger-menu/ -->
+<a href=#>
+  <span></span>
+  <span></span>
+  <span></span>
+</a>
+
+<nav></nav>
+
+<code>
+  clicking on "a" toggles class "open" on "a"
+</code>
 		
 		<h1 class="h1"><center> Bean Town <strong> Coffee House & </strong> <strong> Bakery </strong> <strong class="line"> 45 N Baldwin Ave</strong> </center></h1>
 	
@@ -131,18 +143,18 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 			
 			<div>
 				<div>
-			    <img src="beantown.jpg" class="image-rounded"/>
+				<img src="beantown.jpg" class="img-responsive image-rounded" alt="Responsive image">			    
 			    <span>Mouse</span>
 			  </div>
 			  
 			  <div>
-			    <img src="fosselman.jpg" class="image-rounded" />
-			    <span>Me</span>
+					<img src="fosselman.jpg" class="img-responsiveimage-rounded" alt="Responsive image">			    
+					<span>Me</span>
 			  </div> 
 			</div>
 				    
 
-			    </div>
+			
 </body>
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
