--- a/Beantown.html
+++ b/Beantown.html
@@ -29,15 +29,24 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/carousel.css">
-
+<link rel="stylesheet" type="text/css" href="css/location.css">
 
 	<title>Bean Town Coffee Bar</title>
 </head>
 <body>
 
  <header>
-  <div>
-    <h1><a href="beantown.html">Bean Town</a></h1>
+ <div class="wrapper">
+
+	  <input data-function="swipe" id="swipe" type="checkbox">
+	  <label data-function="swipe" for="swipe">&#xf0c9;</label>
+
+	  <div class="content">  
+	  </div>
+	  
+
+	  <div class="sidebar">
+	  	  	<h1><a href="beantown.html">Bean Town</a></h1>
     <nav class="nav-tabs nav-bar">
      <a href="http://www.musthavemenus.com/places/bean-town-sierra-madre-ca-91024-59533/bean-town-menu-10261263" rel="" class="anchorLink">MENU</a>
      <a href="#catering" rel="" class="anchorLink">CATERING</a>
@@ -48,22 +57,14 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
     
 
     </nav>
-  </div>
+
+	  </div>
+
+	</div>
 </header>
+
 <!-- http://demos.uilang.com/hamburger-menu/ -->
-<a href=#>
-  <span></span>
-  <span></span>
-  <span></span>
-</a>
-
-<nav></nav>
-
-<code>
-  clicking on "a" toggles class "open" on "a"
-</code>
-		
-		<h1 class="h1"><center> Bean Town <strong> Coffee House & </strong> <strong> Bakery </strong> <strong class="line"> 45 N Baldwin Ave</strong> </center></h1>
+	<h1 class="h1"><center> Bean Town <strong> Coffee House & </strong> <strong> Bakery </strong> <strong class="line"> 45 N Baldwin Ave</strong> </center></h1>
 	
 		<div class="line"></div>
 	    
@@ -95,7 +96,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 
 			          <h3>Sunday</h3>
 			          <h4>6:00 am-10:00 pm</h4>			    
-			          </div>
+			        </div>
 				  </div>
 				</div>
 
@@ -138,7 +139,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=" rel="icon" type="image/x-icon" />
 		          <h3>Sunday</h3>
 			      <h4>6:00 am-10:00 pm</h4>	
 
-		    </div>
+		      </div>
 
 			
 			<div>
